--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -20,7 +20,7 @@ Tested:  September 17, 2023
 <body>
     <main>
         <h1>A Personal Reflection</h1>
-        <h2>Looking back on my time in higher education</h2>
+        <h3>Where I was and where I am</h3>
         <div>
             <p>
                 <span style="color: green;">I</span> had never taken an online course until I attended my university. In my sophomore year, I took a world cultures course that changed my outlook on how education can be offered. I took as many online courses as I could during my time at the University of Central Missouri; unfortunately, in my program this only led to me taking one course every-other-semester with one specific instructor. Online courses were not particularly popular at that time at my Division-II rural university. However, knowing that I could engage in a course from anywhere on campus, especially in my residence hall, had me hooked. I went on to graduate school where online courses were still not offered, even at the request of a very motivated and vocal student (me). Sadly, the squeaky wheel did not get the grease that day, nor did it over the course of my two-year program.
