--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -28,8 +28,8 @@ Tested:  September 17, 2023
             Missouri for the Online Educator Graduate Certificate. I will complete this in
             December 2023. 
             <br>
-
-            I am currently a Program Coordinator with Missouri Online.
+</p>
+           <p>I am currently a Program Coordinator with Missouri Online.
             Missouri Online supports <em>all</em> online programs in the University of Missouri
             System. Being a Program Coordinator has deepened my interest in online
             education. I am happy to say I have found my corner in higher education
@@ -37,7 +37,8 @@ Tested:  September 17, 2023
             being a mom to a 2-year-old and taking care of my two dogs. Seeing the
             world through my son’s eyes <strong>constantly</strong> gives me a new perspective. I enjoy
             drinking dark roast coffee and jasmine tea (<em>separately</em>). I am happiest when I
-            am eating sushi with good company. </p>
+            am eating sushi with good company. 
+        </p>
             <br>
             <base href="https://kefr7t.github.io/islt_7310/about.html"/>
             <a href="/islt_7310/Freeman resume.pdf.pdf">Check out my resume!</a>
