--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -39,9 +39,9 @@ Tested:  September 17, 2023
 
             <br> 
              <div>
-                <nav>
+                <nav> 
                     <ul>
-                        <li class="active"><a href="#">Home</a></li>
+                        <a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">#projects.html</a>
                         <ul>
