--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -38,10 +38,10 @@ Tested:  September 17, 2023
              </p>   
 
             <br> 
-             <div>
-                <nav> 
+            <div>
+                <nav>
                     <ul>
-                        <a href="#">Home</a></li>
+                        <li class="active"><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">#projects.html</a>
                         <ul>
@@ -67,6 +67,7 @@ Tested:  September 17, 2023
                     </ul>
                 </nav>
             </div>
+        </main>
         </main>
             <br>
     <footer>Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.</footer>
