--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -36,16 +36,16 @@ Tested:  September 17, 2023
     <div>
         <nav>
             <ul>
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">#projects.html</a>
+                <li class="active"><a href="https://kefr7t.github.io/islt_7310/index.html#">Home</a></li>
+                <li><a href="https://kefr7t.github.io/islt_7310/about.html">About</a></li>
+                <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Projects</a>
                 <ul>
                     <li><a href="#">Link 1</a></li>
                     <li><a href="#">Link 2</a></li>
                     <li><a href="#">Link 3</a></li>
                 </li>
                 </ul>
-                <li><a href="#">reflection.html</a>
+                <li><a href="https://kefr7t.github.io/islt_7310/reflection.html">Reflection</a>
                 <ul>
                     <li><a href="#">Link 1</a></li>
                     <li><a href="#">Link 2</a></li>
