--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -45,36 +45,36 @@ Tested:  September 17, 2023
             <br>
 
             <blockquote> A dog is the only thing on earth that loves you more than you love yourself. - George Eliot</blockquote>
-<div>
-            <nav>
-                <ul>
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">#projects.html</a>
+            <div>
+                <nav>
                     <ul>
-                        <li><a href="#">Link 1</a></li>
-                        <li><a href="#">Link 2</a></li>
-                        <li><a href="#">Link 3</a></li>
-                    </li>
+                        <li class="active"><a href="https://kefr7t.github.io/islt_7310/index.html#">Home</a></li>
+                        <li><a href="https://kefr7t.github.io/islt_7310/about.html">About</a></li>
+                        <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Projects</a>
+                        <ul>
+                            <li><a href="#">Link 1</a></li>
+                            <li><a href="#">Link 2</a></li>
+                            <li><a href="#">Link 3</a></li>
+                        </li>
+                        </ul>
+                        <li><a href="https://kefr7t.github.io/islt_7310/reflection.html">Reflection</a>
+                        <ul>
+                            <li><a href="#">Link 1</a></li>
+                            <li><a href="#">Link 2</a></li>
+                            <li><a href="#">Link 3</a></li>
+                        </li>
+                        </ul> 
+                        <li><a href="#">#contact.html</a>
+                        <ul>
+                            <li><a href="#">Link 1</a></li>
+                            <li><a href="#">Link 2</a></li>
+                            <li><a href="#">Link 3</a></li>
+                        </li>
+                        </ul>
                     </ul>
-                    <li><a href="#">reflection.html</a>
-                    <ul>
-                        <li><a href="#">Link 1</a></li>
-                        <li><a href="#">Link 2</a></li>
-                        <li><a href="#">Link 3</a></li>
-                    </li>
-                    </ul> 
-                    <li><a href="#">#contact.html</a>
-                    <ul>
-                        <li><a href="#">Link 1</a></li>
-                        <li><a href="#">Link 2</a></li>
-                        <li><a href="#">Link 3</a></li>
-                    </li>
-                    </ul>
-                </ul>
-            </nav>
-        </div>
-    </main>
+                </nav>
+            </div>
+        </main>
             <footer>
         Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
     </footer>
