--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -20,8 +20,11 @@ Tested:  September 17, 2023
 </head>
 <body>
     <main>
-        <h1> Kasey Freeman </h1>
-        <h3> Getting to know me </h3>
+        <div class="wrapper">
+            <header class="header">Kasey Freeman</header>
+            <aside class="sidebar">Logo</aside>
+            <article class="content">
+        <h1> Getting to know me </h1>
         <p> My name is Kasey Freeman. I have a Bachelor of Arts in International Studies
             and a Master of Science in College Student Personnel Administration from
             the University of Central Missouri. I currently attend the University of
@@ -39,6 +42,7 @@ Tested:  September 17, 2023
             drinking dark roast coffee and jasmine tea (<em>separately</em>). I am happiest when I
             am eating sushi with good company. 
         </p>
+    </div>
             <br>
             <base href="https://kefr7t.github.io/islt_7310/about.html"/>
             <a href="/islt_7310/Freeman resume.pdf.pdf">Check out my resume!</a>
@@ -74,6 +78,7 @@ Tested:  September 17, 2023
                     </ul>
                 </nav>
             </div>
+        </article>
         </main>
             <footer>
         Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
