--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -22,7 +22,6 @@ Tested:  September 17, 2023
     <main>
         <div class="wrapper">
             <header class="header">Kasey Freeman</header>
-            <aside class="sidebar">Logo</aside>
             <article class="content">
         <h1> Getting to know me </h1>
         <p> My name is Kasey Freeman. I have a Bachelor of Arts in International Studies
@@ -78,7 +77,7 @@ Tested:  September 17, 2023
             </div>
         </article>
         </main>
-            <footer>
+            <footer class="footer">
         Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
     </footer>
  </body>
