--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -6,7 +6,7 @@ Title:  About Me
 Use:  To allow users to get to know me as a person.
 Author:  Kasey Freeman
 Developed: August 31, 2023
-Tested:  September 17, 2023
+Tested:  September 21, 2023
 ******************************************************************************
 -->
 <html lang="en-US">
@@ -65,12 +65,7 @@ Tested:  September 17, 2023
                             <li><a href="#">Link 3</a></li>
                         </li>
                         </ul> 
-                        <li><a href="#">#contact.html</a>
-                        <ul>
-                            <li><a href="#">Link 1</a></li>
-                            <li><a href="#">Link 2</a></li>
-                            <li><a href="#">Link 3</a></li>
-                        </li>
+                        <li><a href="#">#contact.html</a></li>
                         </ul>
                     </ul>
                 </nav>
