--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -21,7 +21,7 @@ Tested:  September 21, 2023
 <body>
     <main>
         <div class="wrapper">
-            <header class="header">Kasey Freeman</header>
+            <header class="header">Kasey Freeman's Fluid Resume</header>
             <article class="content">
         <h1> Getting to know me </h1>
         <p> My name is Kasey Freeman. I have a Bachelor of Arts in International Studies
