--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -21,8 +21,9 @@ Tested:  September 21, 2023
 <body>
     <main>
         <div class="wrapper">
-            <header class="header">Kasey Freeman's Fluid Resume</header>
-            <article class="content">
+            <div class="box header">Kasey Freeman's Fluid Resume</div>
+            <div class="box sidebar">TBD still</div>
+            <div class="box content">
         <h1> Getting to know me </h1>
         <p> My name is Kasey Freeman. I have a Bachelor of Arts in International Studies
             and a Master of Science in College Student Personnel Administration from
@@ -68,13 +69,10 @@ Tested:  September 21, 2023
                         <li><a href="#">#contact.html</a></li>
                         </ul>
                     </ul>
-                </nav>
-            </div>
-        </article>
-
+                </div>
         </main>
-            <footer class="footer">
+    <div class="box footer">
         Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
-    </footer>
+    </div>
  </body>
 </html>
