--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -21,7 +21,7 @@ Tested:  September 21, 2023
 <body>
     <main>
         <div class="wrapper">
-            <div class="box header">Kasey Freeman's Fluid Resume</div>
+            <div class="box header">Welcome to my website!</div>
             <div class="box sidebar">TBD still</div>
             <div class="box content">
         <h1> Getting to know me </h1>
@@ -59,20 +59,15 @@ Tested:  September 21, 2023
                             <li><a href="#">Link 3</a></li>
                         </li>
                         </ul>
-                        <li><a href="https://kefr7t.github.io/islt_7310/reflection.html">Reflection</a>
-                        <ul>
-                            <li><a href="#">Link 1</a></li>
-                            <li><a href="#">Link 2</a></li>
-                            <li><a href="#">Link 3</a></li>
-                        </li>
+                        <li><a href="https://kefr7t.github.io/islt_7310/reflection.html">Reflection</a></li>
                         </ul> 
                         <li><a href="#">#contact.html</a></li>
                         </ul>
                     </ul>
-                </div>
         </main>
     <div class="box footer">
         Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
     </div>
+</div>
  </body>
 </html>
