--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -64,6 +64,7 @@ Tested:  September 21, 2023
                         <li><a href="#">#contact.html</a></li>
                         </ul>
                     </ul>
+                    </nav>
                 </div>
         </main>
     <div class="box footer">
