--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -70,6 +70,6 @@ Tested:  September 21, 2023
     <div class="box footer">
         Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
     </div>
-
+</div>
  </body>
 </html>
