--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -20,20 +20,19 @@ Tested:  September 17, 2023
 <body>
 
     <main>
-    <h1 id="heading1">Welcome!</h1>
+        <div class="wrapper">
+            <div class="box header">Welcome!</div>
+            <div class="box sidebar"> something</div>
+            <div class="box content">
+                <br />
     <h3>Getting to know me</h3>
-    <div>
         <p> 
             <span>Welcome! This website serves as a fluid resume for me, Kasey Freeman.</span>
         </p>
-    </div>
-
-    <div>
+<br>
         <p>This website is designed for <em>any viewer</em> to get to know me better as a person and professional. This also serves as a repository for me to keep track of some key projects I'm proud of. While this website is not all-inclusive of my career experience, feel free to browse around to get to know my career highlights and to know more about me as a person.
         </p>
-    </div>
     <br>
-    <div>
         <nav>
             <ul>
                 <li class="active"><a href="https://kefr7t.github.io/islt_7310/index.html#">Home</a></li>
@@ -52,20 +51,16 @@ Tested:  September 17, 2023
                     <li><a href="#">Link 3</a></li>
                 </li>
                 </ul> 
-                <li><a href="#">#contact.html</a>
-                <ul>
-                    <li><a href="#">Link 1</a></li>
-                    <li><a href="#">Link 2</a></li>
-                    <li><a href="#">Link 3</a></li>
-                </li>
+                <li><a href="#">#contact.html</a></li>
                 </ul>
             </ul>
         </nav>
     </div>
 </main>
         <br>
-<footer>
+        <div class="box footer">
             Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
-</footer>
+        </div>
+    </div>
 </body>
 </html>
