--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -48,7 +48,8 @@ Tested:  September 21, 2023
             <br>
 
             <blockquote> A dog is the only thing on earth that loves you more than you love yourself. - George Eliot</blockquote>
-                <nav>
+        </div> 
+        <nav>
                     <ul>
                         <li class="active"><a href="https://kefr7t.github.io/islt_7310/index.html#">Home</a></li>
                         <li><a href="https://kefr7t.github.io/islt_7310/about.html">About</a></li>
@@ -65,7 +66,7 @@ Tested:  September 21, 2023
                         </ul>
                     </ul>
                     </nav>
-                </div>
+               <div>
         </main>
     <div class="box footer">
         Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
