--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -21,17 +21,16 @@ Tested:  September 21, 2023
 <body>
     <main>
         <div class="wrapper">
-            <div class="box header">Welcome to my website!</div>
-            <div class="box sidebar">TBD still</div>
-            <div class="box content">
-        <h1> Getting to know me </h1>
-        <p> My name is Kasey Freeman. I have a Bachelor of Arts in International Studies
+            <header class="header">Welcome to my website!</header>
+            <aside class="sidebar">TBD still</aside>
+            <article class="content">
+        <h1>Getting to know me</h1>
+        <p>My name is Kasey Freeman. I have a Bachelor of Arts in International Studies
             and a Master of Science in College Student Personnel Administration from
             the University of Central Missouri. I currently attend the University of
             Missouri for the Online Educator Graduate Certificate. I will complete this in
             December 2023. 
-            <br>
-</p>
+            <br></p>
            <p>I am currently a Program Coordinator with Missouri Online.
             Missouri Online supports <em>all</em> online programs in the University of Missouri
             System. Being a Program Coordinator has deepened my interest in online
@@ -40,13 +39,11 @@ Tested:  September 21, 2023
             being a mom to a 2-year-old and taking care of my two dogs. Seeing the
             world through my son’s eyes <strong>constantly</strong> gives me a new perspective. I enjoy
             drinking dark roast coffee and jasmine tea (<em>separately</em>). I am happiest when I
-            am eating sushi with good company. 
-        </p>
+            am eating sushi with good company. </p>
             <br>
             <base href="https://kefr7t.github.io/islt_7310/about.html"/>
             <a href="/islt_7310/Freeman resume.pdf.pdf">Check out my resume!</a>
             <br>
-
             <blockquote> A dog is the only thing on earth that loves you more than you love yourself. - George Eliot</blockquote>
                 <nav>
                     <ul>
@@ -63,11 +60,11 @@ Tested:  September 21, 2023
                         <li><a href="#">#contact.html</a></li>
                     </ul>
                     </nav>
-                </div>
-    <div class="box footer">
-        Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
-    </div>
-</div>
+                </article>
 </main>
+    <footer class="footer">
+        Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
+    </footer>
+</div>
  </body>
 </html>
