--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -21,11 +21,10 @@ Tested:  September 17, 2023
 
     <main>
         <div class="wrapper">
-            <div class="box header">Welcome!</div>
-            <div class="box sidebar"> something</div>
-            <div class="box content">
-                <br />
-    <h3>Getting to know me</h3>
+            <header class="header">Welcome to my website!</header>
+            <aside class="sidebar">TBD still</aside>
+            <article class="content">
+    <h1>Getting to know me</h1>
         <p> 
             <span>Welcome! This website serves as a fluid resume for me, Kasey Freeman.</span>
         </p>
@@ -44,23 +43,16 @@ Tested:  September 17, 2023
                     <li><a href="#">Link 3</a></li>
                 </li>
                 </ul>
-                <li><a href="https://kefr7t.github.io/islt_7310/reflection.html">Reflection</a>
-                <ul>
-                    <li><a href="#">Link 1</a></li>
-                    <li><a href="#">Link 2</a></li>
-                    <li><a href="#">Link 3</a></li>
-                </li>
-                </ul> 
+                <li><a href="https://kefr7t.github.io/islt_7310/reflection.html">Reflection</a></li>
                 <li><a href="#">#contact.html</a></li>
-                </ul>
             </ul>
         </nav>
-    </div>
+    </article>
 </main>
         <br>
-        <div class="box footer">
+        <footer class="footer">
             Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
-        </div>
+        </footer>
     </div>
 </body>
 </html>
