--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -24,9 +24,9 @@ Tested:  September 17, 2023
             <header class="header">Welcome to my website!</header>
             <aside class="sidebar">TBD still</aside>
             <article class="content">
-    <h1>Getting to know me</h1>
+    <h1>Who am I?</h1>
         <p> 
-            <span>Welcome! This website serves as a fluid resume for me, Kasey Freeman.</span>
+            <span>This website serves as a fluid resume for me, Kasey Freeman.</span>
         </p>
 <br>
         <p>This website is designed for <em>any viewer</em> to get to know me better as a person and professional. This also serves as a repository for me to keep track of some key projects I'm proud of. While this website is not all-inclusive of my career experience, feel free to browse around to get to know my career highlights and to know more about me as a person.
