--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -57,7 +57,7 @@ Tested:  September 21, 2023
                         </li>
                         </ul>
                         <li><a href="https://kefr7t.github.io/islt_7310/reflection.html">Reflection</a></li>
-                        <li><a href="#">#contact.html</a></li>
+                        <li><a href="#">#contact</a></li>
                     </ul>
                     </nav>
                 </article>
