--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -22,6 +22,7 @@ Tested:  September 21, 2023
     <main>
         <div class="wrapper">
             <header class="header">Welcome to my website!</header>
+            <aside class="sidebar">TBD still</aside>
             <article class="content">
         <h1>Getting to know me</h1>
         <p>My name is Kasey Freeman. I have a Bachelor of Arts in International Studies
