--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -43,7 +43,9 @@ Tested:  September 21, 2023
             <br>
             <base href="https://kefr7t.github.io/islt_7310/about.html"/>
             <a href="/islt_7310/Freeman resume.pdf.pdf">Check out my resume!</a>
-              <img src="https://kefr7t.github.io/islt_7310/Freeman%20resume.pdf.pdf">
+              <img src="https://kefr7t.github.io/islt_7310/Freeman%20resume.pdf.pdf"
+                alt="centred-image"
+      style="width:50%">
             <br>
             <blockquote> A dog is the only thing on earth that loves you more than you love yourself. - George Eliot</blockquote>
             <br> 
