--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -43,8 +43,12 @@ Tested:  September 21, 2023
             <br>
             <base href="https://kefr7t.github.io/islt_7310/about.html"/>
             <a href="/islt_7310/Freeman resume.pdf.pdf">Check out my resume!</a>
-              <embed src="kefr7t.github.io/islt_7310/Freeman resume.pdf.pdf" width="500" height="375" 
- type="application/pdf">
+              <object
+                type="application/pdf"
+                data="kefr7t.github.io/islt_7310/Freeman resume.pdf.pdf" 
+                width="600" 
+                height="700" 
+                >
             <br>
             <blockquote> A dog is the only thing on earth that loves you more than you love yourself. - George Eliot</blockquote>
             <br> 
