--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -45,7 +45,7 @@ Tested:  September 21, 2023
             <a href="/islt_7310/Freeman resume.pdf.pdf">Check out my resume!</a>
               <object
                 type="application/pdf"
-                data="kefr7t.github.io/islt_7310/Freeman resume.pdf.pdf" 
+                data="https://kefr7t.github.io/islt_7310/Freeman resume.pdf.pdf" 
                 width="600" 
                 height="700" 
                 >
