--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -49,7 +49,8 @@ Tested:  September 21, 2023
             <blockquote> A dog is the only thing on earth that loves you more than you love yourself. - George Eliot</blockquote>
             <br>
             </article>
-              <nav>
+             <header class="header">
+               <nav>
                     <ul>
                         <li class="active"><a href="https://kefr7t.github.io/islt_7310/index.html#">Home</a></li>
                         <li><a href="https://kefr7t.github.io/islt_7310/about.html">About</a></li>
@@ -64,7 +65,7 @@ Tested:  September 21, 2023
                         <li><a href="#">#contact</a></li>
                     </ul>
                     </nav>
-              
+             </header>
 </main>
 <br>
     <footer class="footer">
