--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -22,7 +22,9 @@ Tested:  September 21, 2023
     <main>
         <div class="wrapper">
             <header class="header">Welcome to my website!</header>
-            <aside class="sidebar">design</aside>
+            <aside class="sidebar"><div class="container">
+      <div class="image">
+        <img src="https://drive.google.com/file/d/125Vg3jZ8z9GidywSbiEsCxaG501xcbHR/view?usp=drivesdk" </aside>
             <article class="content">
         <h1>Getting to know me</h1>
         <p>My name is Kasey Freeman. I have a Bachelor of Arts in International Studies
