--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -22,10 +22,11 @@ Tested:  September 21, 2023
     <main>
         <div class="wrapper">
             <header class="header">Welcome to my website!</header>
-            <aside class="sidebar"><div class="container">
+            <aside class="sidebar">Profile picture</aside>
+            <div class="container">
       <div class="image">
-        <img src="https://drive.google.com/file/d/125Vg3jZ8z9GidywSbiEsCxaG501xcbHR/view?usp=drivesdk" </aside>
-            <article class="content">
+        <img src="https://drive.google.com/file/d/125Vg3jZ8z9GidywSbiEsCxaG501xcbHR/view?usp=drivesdk">
+        <article class="content">
         <h1>Getting to know me</h1>
         <p>My name is Kasey Freeman. I have a Bachelor of Arts in International Studies
             and a Master of Science in College Student Personnel Administration from
