--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -23,9 +23,9 @@ Tested:  September 21, 2023
         <div class="wrapper">
             <header class="header">Welcome to my website!</header>
             <aside class="sidebar">Profile picture</aside>
-            <div class="container">
-      <div class="image">
+            <div class="container"> <div class="image">
         <img src="https://drive.google.com/file/d/125Vg3jZ8z9GidywSbiEsCxaG501xcbHR/view?usp=drivesdk">
+      </div>
         <article class="content">
         <h1>Getting to know me</h1>
         <p>My name is Kasey Freeman. I have a Bachelor of Arts in International Studies
