--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -22,9 +22,10 @@ Tested:  September 21, 2023
     <main>
         <div class="wrapper">
             <header class="header">Welcome to my website!</header>
-            <aside class="sidebar">Profile picture</aside>
+            <aside class="sidebar">Profile picture
             <div class="container"> <div class="image">
-        <img src="https://drive.google.com/file/d/125Vg3jZ8z9GidywSbiEsCxaG501xcbHR/view?usp=drivesdk">
+        <img src="https://kefr7t.github.io/islt_7310/pic staff.png">
+            </aside>
       </div>
         <article class="content">
         <h1>Getting to know me</h1>
