--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -23,8 +23,8 @@ Tested:  September 21, 2023
         <div class="wrapper">
             <header class="header">Welcome to my website!</header>
             <aside class="sidebar">Profile picture</aside>
-            <div class="container"> <div class="image">
-        <img src="https://kefr7t.github.io/islt_7310/pic staff.png">
+            <aside><div class="container"> <div class="image">
+        <img src="https://kefr7t.github.io/islt_7310/pic staff.png"></aside>
             
       </div>
         <article class="content">
