--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -20,12 +20,13 @@ Tested:  September 21, 2023
 </head>
 <body>
     <main>
+      <div class="container"> 
+  <aside class="sidebar">Profile picture</aside>
+      <div class="image">
+      <img src="https://kefr7t.github.io/islt_7310/pic staff.png"></div>
+           
         <div class="wrapper">
-            <aside class="sidebar">Profile picture</aside>
-            <aside><div class="container"> <div class="image">
-        <img src="https://kefr7t.github.io/islt_7310/pic staff.png"></aside>
-            <div class="wrapper">
-            <header class="header">Welcome to my website!</header>
+        <header class="header">Welcome to my website!</header>
       </div>
         <article class="content">
         <h1>Getting to know me</h1>
