--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -22,8 +22,8 @@ Tested:  September 21, 2023
     <main>
         <div class="wrapper">
         <header class="header">Welcome to my website!</header>
-        <aside class="sidebar">Profile picture</aside>
-      <img src="https://kefr7t.github.io/islt_7310/pic staff.png"></div>
+        <aside class="sidebar">Profile picture<img src="https://kefr7t.github.io/islt_7310/pic staff.png"></aside>
+      </div>
            
       </div>
         <article class="content">
