--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -22,7 +22,8 @@ Tested:  September 21, 2023
     <main>
         <div class="wrapper">
         <header class="header">Welcome to my website!</header>
-        <aside class="sidebar">Profile picture<img src="https://kefr7t.github.io/islt_7310/pic staff.png"></aside>
+        <aside class="sidebar">Profile picture
+          <img src="https://kefr7t.github.io/islt_7310/pic staff.png"></aside>
         <article class="content">
         <h1>Getting to know me</h1>
         <p>My name is Kasey Freeman. I have a Bachelor of Arts in International Studies
@@ -46,6 +47,7 @@ Tested:  September 21, 2023
             <br>
             <blockquote> A dog is the only thing on earth that loves you more than you love yourself. - George Eliot</blockquote>
             <br>
+           </article>
                <nav>
                     <ul>
                         <li class="active"><a href="https://kefr7t.github.io/islt_7310/index.html#">Home</a></li>
@@ -61,7 +63,6 @@ Tested:  September 21, 2023
                         <li><a href="#">#contact</a></li>
                     </ul>
                     </nav>
-            </article>
 </main>
 <br>
     <footer class="footer">
