--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -47,7 +47,8 @@ Tested:  September 21, 2023
             <br>
             <blockquote> A dog is the only thing on earth that loves you more than you love yourself. - George Eliot</blockquote>
             <br>
-           
+          </article>
+           <header class="header">
                <nav>
                     <ul>
                         <li class="active"><a href="https://kefr7t.github.io/islt_7310/index.html#">Home</a></li>
@@ -63,7 +64,7 @@ Tested:  September 21, 2023
                         <li><a href="#">#contact</a></li>
                     </ul>
                     </nav>
-</article>
+           </header>
         </main>
 <br>
     <footer class="footer">
